# internal/api/router.go
@@ -10,8 +10,8 @@ import (
 func SetupRouter(v1 *gin.RouterGroup, db *gorm.DB) {
 	// Product handler
 	productHandler := handlers.NewProductHandler(db)
-	v1.GET("/products/average-price", productHandler.GetAveragePrice)
 	v1.GET("/products", productHandler.GetProducts)
+	v1.GET("/products/:id", productHandler.GetProduct)
 	v1.POST("/products", productHandler.CreateProduct)
 	v1.DELETE("/products/:id", productHandler.DeleteProduct)
 
