# internal/models/stock_usage.go
@@ -5,12 +5,10 @@ import (
 )
 
 type StockUsage struct {
-	ID              uint          `gorm:"primaryKey" json:"id"`
-	SaleID          uint          `json:"saleId"`
-	Sale            Sale          `gorm:"foreignKey:SaleID" json:"sale"`
-	StockMovementID uint          `json:"stockMovementId"`
-	StockMovement   StockMovement `gorm:"foreignKey:StockMovementID" json:"stockMovement"`
-	UsedQuantity    float64       `json:"usedQuantity"`
-	CreatedAt       time.Time     `json:"createdAt"`
-	UpdatedAt       time.Time     `json:"updatedAt"`
+	ID              uint      `json:"id" gorm:"primarykey"`
+	SaleID          uint      `json:"saleId"`
+	StockMovementID uint      `json:"stockMovementId"`
+	UsedQuantity    float64   `json:"usedQuantity"`
+	CreatedAt       time.Time `json:"createdAt"`
+	UpdatedAt       time.Time `json:"updatedAt"`
 }
